# test

./: copy_into.py  euc_sf_make_testdata.py  helloworld.txt  pyproject.toml  snowflake-python-pandas.py
